compiler/tools/fpp-check/test/state_machine/undef/guard_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/undef/guard_error.fpp:4.17
  choice C { if g enter S else enter S }
                ^
error: undefined symbol g
